# Wei

./: .gitignore  BinaryOperator.cpp  Block.cpp  CMakeLists.txt  CallFunc.cpp  DecFunc.cpp  Environment.cpp  Exceptions.cpp  ExpressionTree.cpp  Identifier.cpp  Index.cpp  LICENSE  Number.cpp  Parser.cpp  README.md  String.cpp  UnaryOperator.cpp  Value.cpp  Variable.cpp  a.out  convert_num.cpp  examples.jc  examples.wei  main.cpp  test.wei
docs/: doc.md
examples/: array.wei  object.wei
include/: BinaryOperator.h  Block.h  Environment.h  Exceptions.h  ExpressionTree.h  UnaryOperator.h  Value.h  convert_num.h
src/: Array.cpp  BinaryOperator.cpp  Block.cpp  CallFunc.cpp  DecFunc.cpp  Environment.cpp  Exceptions.cpp  ExpressionTree.cpp  FloatNumber.cpp  If.cpp  Index.cpp  LibFuncCode.cpp  Number.cpp  Object.cpp  ObjectIndex.cpp  Parser.cpp  String.cpp  UnaryOperator.cpp  Value.cpp  Variable.cpp  While.cpp  convert_num.cpp  main.cpp  replaceAll.h  test.wei
